--- a/Introduction to CSS/Q 1.CSS/style.css
+++ b/Introduction to CSS/Q 1.CSS/style.css
@@ -2,7 +2,7 @@ body{
     font-family: 'Lobster', cursive;
 font-family: 'Play', sans-serif;
 }
-
+​
 .css_fonts{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
