--- a/29.7.2021/style.css
+++ b/29.7.2021/style.css
@@ -6,3 +6,44 @@ font-family: 'play' , sans-serif;
 .css_fonts{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+.container {
+    border:1px solid black;
+    background-color:blue;
+    margin: 20px;
+    padding: 2opx;
+    width: 100vw;
+    height: 100vh;
+    }
+    
+    #-details{
+        border: 1px dotted blue
+    }
+    
+    #lecture2 {
+        font-size: 8px;
+    }
+    
+    .main-title {
+        font-size: 2em;
+    }
+    
+    .rem{
+        font-size: 2rem;
+    }
+    
+    .vhw{
+       height: 80vh;
+       width: 80vw; 
+       background-color: blue;
+    }
+    
+    .main-image {
+        width: 100%;
+        height: 100%;
+    }
+    .box1 { 
+        background-color: blue;
+    }
+    h4 {
+      background-color: chartreuse;
+    }
