--- a/1. Aug 2021/css/styles.css
+++ b/1. Aug 2021/css/styles.css
@@ -171,3 +171,9 @@ input[type=text], select, textarea {
     
     padding: 10px 40px 10px 40px;
 }
+.dnlogo{
+    position: relative;
+    right:30px;
+    top:20px;
+    width:18%;
+}
