--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,12 +1,11 @@
 /* CSS Resset */
 
 :root {
-    --main-bg-color: #2B2C2C;
-    --button-links-color: rgb(135, 57, 250);
+    --main-bg-color: #000000;
+    --button-links-color: #8739FA;
     --main-font-color: #f6f6f6;
     --sub-font-color: #777779;
-
-
+    --links-icon-color: #626164;
 }
 
 body {
@@ -14,6 +13,7 @@ body {
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    font-family: 'Poppins', sans-serif;
 }
 
 /* font for logo */
@@ -25,16 +25,20 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 100vh;
     position: relative;
 }
 
+
+/* nav bar styling */
 nav {
     display: flex;
     justify-content: space-around;
-    background: var(--main-bg-color);
+    /* background: var(--main-bg-color); */
     width: 100%;
-    height: 70px;
+    height: 15vh;
     position: fixed;
+    /* box-shadow: 0px 17px 32px 0px rgba(0,0,0,0.27); */
     top: 0;
     left: 0;
     z-index: 1;
@@ -73,15 +77,90 @@ ul.menu li a {
     text-decoration: none;
     font-weight: 500;
     font-size: 1.175em;
-    color: var(--main-font-color);
+    color: var(--sub-font-color);
     font-family: 'Poppins', sans-serif;
   
 }
 
 ul.menu li a:hover {
-    color: var(--button-links-color);
+    color: var(--main-font-color);
 }
 
-nav .hamburger, nav .hamburger-icon {
+
+
+ nav .hamburger, nav .hamburger-icon {
     display: none;
+
+}   
+
+/* Nav bar styling ends here */
+
+.content {
+    /* background: #777779; */
+    width: 90%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.img {
+    width: 500px;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--button-links-color);
+    border-radius:  53% 47% 67% 33% / 29% 39% 61% 71%;
+    
+}
+
+.img img {
+    width: 100%;
+    height: 100%;
+
+
+}
+
+
+/*  */
+.intro {
+    width: 500px;
+    
+}
+
+.intro_content {
+    font-size: 4em;
+    line-height: 1;
+    font-weight: 400;
+    color: var(--main-font-color);
+    margin-bottom: 0.5rem;
+    
+}
+
+.intro .description {
+    font-size: 2em;
+    color: var(--sub-font-color);
+}
+
+.hireme-btn {
+    width: 190px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: 400;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    border-radius: 11px;
+    color: var(--main-font-color);
+    display: grid;
+    place-items: center;
+    background: var(--button-links-color);
+} 
+
+.aboutme-container {
+    background: var(--links-icon-color);
+
 }
