--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -168,7 +168,7 @@ ul.menu li a:hover {
     justify-content: space-between;
     align-items: center;
     position: absolute;
-    top: 120%;
+    top: 125%;
     left: 50%;
     background: var(--secondary-bg-color);
     transform: translate(-50%,-50%);
@@ -218,4 +218,69 @@ ul.menu li a:hover {
     50%{opacity: 0.5; padding: 0px 50px;}
     75%{opacity: 0; padding: 0px 30px;}
     100%{opacity: 1; padding: 0px 0px;}
+}
+
+/* Styling skills section */
+
+#skills {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    top: 185%;
+    left: 50%;
+    background: var(--main-bg-color);
+    transform: translate(-50%,-50%);
+    
+}
+
+.skill-text {
+    /* background: chartreuse; */
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* flex-grow: 1; */
+}
+
+.skill-text h1 {
+    font-size: 2.5em;
+    color: var(--main-font-color);
+    letter-spacing: 2px;
+}
+
+.skill-name h3 {
+    font-size: 1.875em;
+    color: var(--main-font-color);
+}
+
+.row {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    align-items: stretch;
+}
+
+.skill-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.skill-box ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+    line-height: 2em;
+    color: var(--sub-font-color);
+}
+
+.fas {
+    color: var(--button-links-color) !important;
+    font-size: 2.5em !important;
 }
