--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -147,6 +147,36 @@ ul.menu li a:hover {
     color: var(--sub-font-color);
 }
 
+
+
+.social-icons ul {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin-left: -58px;
+}
+
+
+.social-icons-container ul li {
+    margin: 3%;
+
+}
+
+
+.social-icons-container ul .fab,
+.social-icons-container ul .far
+ {   
+     transition: .3s;
+     font-size: 2.5em !important;
+    color: var(--links-icon-color) !important;
+
+}
+
+.social-icons-container ul .fab:hover,
+.social-icons-container ul .far:hover{
+    color: var(--main-font-color) !important;
+}
+
 .hireme-btn {
     width: 190px;
     height: 50px;
@@ -302,11 +332,9 @@ ul.menu li a:hover {
 
 #my-projects {
     width: 100vw;
-    /* height: 80vh; */
-    /* background: var(--secondary-bg-color); */
     position: absolute;
     top: 220%;
-    /* left: 50%; */
+    
 }
 
 
@@ -370,4 +398,143 @@ ul.menu li a:hover {
 
 }
 
+#contact-me {
+    width: 100vw;
+    position: absolute;
+    background: var(--secondary-bg-color);
+    top: 450%;
+    color: var(--main-font-color);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 2em;
+}
+
+
+
+/* Contact form styling begins */
+#contact-me h1 {
+    margin: 4%;
+    border-bottom: 4px solid var(--button-links-color);
+}
+
+#contact {
+    width: 100vw;
+    position: absolute;
+    background: var(--secondary-bg-color);
+    top: 486.5%;
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column; 
+    /* align-items: center; */
+}
+
+.container {
+    /* background: chartreuse; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.contact-form {
+    max-width: 800px;
+    flex: 0.7;
+    text-align: center;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 8.5px );
+    -webkit-backdrop-filter: blur( 8.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+.contact-form h2 {
+    font-size: 2.25em;
+    color: var(--main-font-color);
+}
+
+.contact-form .inputBox {
+    position: relative;
+    width: 100%;
+    margin-top: 5%;
+}
+
+.contact-form .inputBox input,
+.contact-form .inputBox textarea
+ {
+    width: 100%;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    background: transparent;
+    border: none;
+    outline: none;
+    resize: none;
+    border-bottom: 2px solid var(--main-font-color);
+}
+
+
+.contact-form .inputBox span {
+    position: absolute;
+    left: 0;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    pointer-events: none;
+    transition: 0.5s;
+    color:var(--main-font-color);
+}
+
+.contact-form .inputBox input:focus ~ span,
+.contact-form .inputBox input:valid ~ span,
+.contact-form .inputBox textarea:focus ~ span,
+.contact-form .inputBox textarea:valid ~ span {
+    color:var(--main-font-color); 
+    font-size: 12px; 
+    transform: translateY(-30px); 
+}
+
+.inputBox .hireme-btn {
+    width: 100%;
+
+}
+
+.contact-info {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.box {
+    position: relative;
+    padding: 20px 0;
+    display: flex;
+    /* background: yellow; */
+}
+
+.icon {
+    /* background: whitesmoke; */
+    display: flex;
+    align-items: center;
+    
+}
+
+.icon .fab {
+    color: var(--sub-font-color) !important;
+    font-size: 2em !important;
+}
+
+.icon .far {
+    color: var(--sub-font-color) !important;
+    font-size: 2em !important;
+}
+
+.text {
+    display: flex;
+    margin-left: 20px;
+    font-size: 16px;
+    color: var(--sub-font-color);
+    flex-direction: column;
+}
 
