--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -35,7 +35,7 @@ nav {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    height: 15vh;
+    height: 14vh;
     position: fixed;
     box-shadow: 0px 17px 32px 0px rgba(0,0,0,0.27); 
     top: 0;
@@ -105,7 +105,6 @@ ul.menu li a:hover {
 /* Nav bar styling ends here */
 
 .content {
-    /* background: #777779; */
     width: 90%;
     display: flex;
     justify-content: space-around;
@@ -200,7 +199,6 @@ ul.menu li a:hover {
 
 #aboutme-container {
     width: 100%;
-    /* height: 50vh; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -219,7 +217,7 @@ ul.menu li a:hover {
     flex: 1;
     align-items: center;
     justify-content: center;
-    /* margin-bottom: -10px; */
+    
     
 }
 
@@ -232,7 +230,6 @@ ul.menu li a:hover {
     color: var(--main-bg-color);
 }
 .my-desc {
-    /* background: chocolate;  */
     max-width: 50%;
     flex: 1;
     justify-content: center;
@@ -250,11 +247,8 @@ ul.menu li a:hover {
 }
 
 
-.content {
-    animation: slide 1s linear 0s 1 forwards;
-}
 
-.aboutme-container, .skills, .experience, .my-projects, .contact{
+#aboutme-container, .content, #skills, #contact-me, #my-projects, #contact{
     animation: slide 1s linear 0s 1 forwards;
 }
 
@@ -371,7 +365,7 @@ ul.menu li a:hover {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    /* background: var(--button-links-color); */
+    
 }
 
 .project-img {
@@ -402,7 +396,6 @@ ul.menu li a:hover {
 
 
 .project-details {
-
     flex: 0.7;
     
 }
@@ -442,13 +435,11 @@ ul.menu li a:hover {
     background: var(--secondary-bg-color);
     top: 486.5%;
     display: flex;
-    /* justify-content: center; */
     flex-direction: column; 
-    /* align-items: center; */
+  
 }
 
 .container {
-    /* background: chartreuse; */
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -528,11 +519,10 @@ ul.menu li a:hover {
     position: relative;
     padding: 20px 0;
     display: flex;
-    /* background: yellow; */
+   
 }
 
 .icon {
-    /* background: whitesmoke; */
     display: flex;
     align-items: center;
     
